--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -7220,22 +7220,24 @@ a.th {
 /* line 19, ../sass/custom.scss */
 fieldset {
   border: 0;
+  margin: 0;
+  padding: 0;
 }
 
-/* line 21, ../sass/custom.scss */
-h1 {
+/* line 25, ../sass/custom.scss */
+h3 {
   margin-bottom: 0;
 }
 
-/* line 27, ../sass/custom.scss */
+/* line 31, ../sass/custom.scss */
 #columnWrapper {
   background: -webkit-linear-gradient(left, #f2f2f2 323px, #e5e5e5 10px);
   background-size: 333px;
-  height: 600px;
+  height: 500px;
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
-/* line 34, ../sass/custom.scss */
+/* line 38, ../sass/custom.scss */
 #controls {
   height: 45px;
   border: 1px solid #f2f2f2;
@@ -7245,26 +7247,26 @@ h1 {
   overflow: hidden;
 }
 
-/* line 43, ../sass/custom.scss */
+/* line 47, ../sass/custom.scss */
 #flat {
   width: 666px;
 }
 
-/* line 47, ../sass/custom.scss */
+/* line 51, ../sass/custom.scss */
 #flatWrapper {
   display: none;
   background: -webkit-linear-gradient(left, #f2f2f2 323px, #e5e5e5 10px);
   background-size: 333px;
-  height: 600px;
+  height: 500px;
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
-/* line 55, ../sass/custom.scss */
+/* line 59, ../sass/custom.scss */
 #frame {
-  height: 600px;
+  height: 500px;
 }
 
-/* line 59, ../sass/custom.scss */
+/* line 63, ../sass/custom.scss */
 #hierarchy {
   width: 320px;
   display: none;
@@ -7272,58 +7274,58 @@ h1 {
   overflow: hidden;
   margin-top: 50px;
 }
-/* line 66, ../sass/custom.scss */
+/* line 70, ../sass/custom.scss */
 #hierarchy ul {
   margin: 0;
   padding: 0;
   list-style-type: none;
   width: 100%;
 }
-/* line 73, ../sass/custom.scss */
+/* line 77, ../sass/custom.scss */
 #hierarchy ul li {
   padding: 5px 0 5px 10px;
   width: 100%;
 }
-/* line 78, ../sass/custom.scss */
+/* line 82, ../sass/custom.scss */
 #hierarchy ul li.child {
   background: url(../images/child.svg) no-repeat left 0px;
   background-size: 20px;
   padding-left: 25px;
   margin-left: 5px;
 }
-/* line 85, ../sass/custom.scss */
+/* line 89, ../sass/custom.scss */
 #hierarchy ul li ul {
   margin-left: 15px;
 }
 
-/* line 92, ../sass/custom.scss */
+/* line 96, ../sass/custom.scss */
 #holder {
-  height: 600px;
+  height: 500px;
   border: 1px solid lightgrey;
   width: 1000px;
   overflow-x: scroll;
   overflow-y: hidden;
   white-space: nowrap;
 }
-/* line 100, ../sass/custom.scss */
+/* line 104, ../sass/custom.scss */
 #holder ul {
   display: inline-block !important;
 }
 
-/* line 107, ../sass/custom.scss */
+/* line 111, ../sass/custom.scss */
 .button {
   background: #f2f2f2;
   border: 1px solid lightgrey;
   font-weight: 300 !important;
   color: dimgrey;
 }
-/* line 113, ../sass/custom.scss */
+/* line 117, ../sass/custom.scss */
 .button:hover {
   background: #e5fbff;
   color: dimgrey;
 }
 
-/* line 119, ../sass/custom.scss */
+/* line 123, ../sass/custom.scss */
 .copyNotice {
   position: absolute;
   top: 50%;
@@ -7341,19 +7343,19 @@ h1 {
   box-shadow: 0px 0px 1px #000;
   -webkit-animation: copy 400ms;
 }
-/* line 137, ../sass/custom.scss */
+/* line 141, ../sass/custom.scss */
 .copyNotice h1 {
   margin-bottom: 0;
   color: white;
 }
-/* line 142, ../sass/custom.scss */
+/* line 146, ../sass/custom.scss */
 .copyNotice p {
   color: white;
   font-size: 0.9em;
   font-weight: 300;
   padding: 5px;
 }
-/* line 149, ../sass/custom.scss */
+/* line 153, ../sass/custom.scss */
 .copyNotice .cancel {
   display: block;
   border: 0;
@@ -7369,36 +7371,36 @@ h1 {
 }
 
 @-webkit-keyframes copy {
-  /* line 165, ../sass/custom.scss */
+  /* line 169, ../sass/custom.scss */
   from {
     opacity: 0;
   }
 
-  /* line 166, ../sass/custom.scss */
+  /* line 170, ../sass/custom.scss */
   to {
     opacity: 1;
   }
 }
 
-/* line 169, ../sass/custom.scss */
+/* line 173, ../sass/custom.scss */
 .contextual {
   display: none;
 }
 
-/* line 173, ../sass/custom.scss */
+/* line 177, ../sass/custom.scss */
 .data-list {
-  height: 600px;
+  height: 500px;
   overflow-y: scroll;
   overflow-x: hidden;
   padding: 0;
   margin: 0 10px 0 0;
   width: 323px;
 }
-/* line 181, ../sass/custom.scss */
+/* line 185, ../sass/custom.scss */
 .data-list li {
   position: relative;
 }
-/* line 185, ../sass/custom.scss */
+/* line 189, ../sass/custom.scss */
 .data-list li a {
   display: block;
   height: 55px;
@@ -7411,37 +7413,37 @@ h1 {
   overflow: hidden;
   transition: height 400ms ease, background-color 400ms ease, opacity 400ms ease;
 }
-/* line 198, ../sass/custom.scss */
+/* line 202, ../sass/custom.scss */
 .data-list li a:hover {
   background-color: #f2f2f2;
 }
-/* line 202, ../sass/custom.scss */
+/* line 206, ../sass/custom.scss */
 .data-list li a.copyHover:hover {
   background-color: lightgrey;
 }
-/* line 206, ../sass/custom.scss */
+/* line 210, ../sass/custom.scss */
 .data-list li a.selected {
   background-color: #e5fbff;
 }
-/* line 210, ../sass/custom.scss */
+/* line 214, ../sass/custom.scss */
 .data-list li a.open {
   height: 200px;
 }
-/* line 214, ../sass/custom.scss */
+/* line 218, ../sass/custom.scss */
 .data-list li a.copyState {
   background-color: #e5fbff;
 }
-/* line 217, ../sass/custom.scss */
+/* line 221, ../sass/custom.scss */
 .data-list li a.copyState p {
   opacity: 0.5;
 }
-/* line 222, ../sass/custom.scss */
+/* line 226, ../sass/custom.scss */
 .data-list li a p {
   padding-left: 20px;
   padding-top: 3px;
   white-space: normal;
 }
-/* line 227, ../sass/custom.scss */
+/* line 231, ../sass/custom.scss */
 .data-list li a p.title {
   display: block;
   width: 90%;
@@ -7450,13 +7452,13 @@ h1 {
   line-height: 0.9em;
   margin-bottom: 0;
 }
-/* line 236, ../sass/custom.scss */
+/* line 240, ../sass/custom.scss */
 .data-list li a p.description {
   font-size: 0.8em;
   color: #999999;
   padding-top: 0;
 }
-/* line 242, ../sass/custom.scss */
+/* line 246, ../sass/custom.scss */
 .data-list li a p.info {
   font-size: 0.80em;
   margin-top: 20px;
@@ -7464,34 +7466,34 @@ h1 {
   color: #999999;
   white-space: normal;
 }
-/* line 253, ../sass/custom.scss */
+/* line 257, ../sass/custom.scss */
 .data-list li.loadmore a {
   background-image: none;
   text-align: center;
 }
-/* line 257, ../sass/custom.scss */
+/* line 261, ../sass/custom.scss */
 .data-list li.loadmore a p {
   margin-top: 20px;
 }
 
-/* line 264, ../sass/custom.scss */
+/* line 268, ../sass/custom.scss */
 .data-display {
   overflow: hidden;
 }
 
-/* line 268, ../sass/custom.scss */
+/* line 272, ../sass/custom.scss */
 .paginationArea {
   display: none;
   margin-top: 30px;
   text-align: center;
 }
-/* line 273, ../sass/custom.scss */
+/* line 277, ../sass/custom.scss */
 .paginationArea ul {
   margin: 0 auto;
   width: 30%;
 }
 
-/* line 279, ../sass/custom.scss */
+/* line 283, ../sass/custom.scss */
 .row {
   height: auto !important;
 }
